# coreutils.ml

./: .gitignore  README.md  coreutils.opam  dune-project
lib/: dune  printenv.ml  printenv.mli  uname.ml  uname.mli
test/: dune
